--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,7 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
+platform :ios, '11.0'
+
 target 'AJRouter_Example' do
   pod 'AJRouter',
   :path => '../'
